...
    <item name="tv_date_next" type="id" />
    <item name="tv_home_next" type="id" />
    <item name="tv_away_next" type="id" />

    <!--Team-->
    <item name="tv_name_teams" type="id" />
    <item name="layout_team_list" type="id" />
    <item name="iv_team" type="id" />
    <item name="tv_desc_team" type="id" />
    <item name="spinner_team" type="id" />
    <item name="rv_team" type="id" />

    <!--FavorMatchModelatch-->
    <item name="fav_match_container" type="id" />
    <item name="tv_title_fav" type="id" />
    <item name="tv_date_fav_match" type="id" />
    <item name="tv_home_fav_match" type="id" />
    <item name="tv_away_fav_match" type="id" />
    <item name="tv_home_score_fav" type="id" />
    <item name="tv_away_score_fav" type="id" />
...
